--- a/app/gradle.properties
+++ b/app/gradle.properties
@@ -4,10 +4,8 @@ minSdk=30
 versionCode=1
 versionName=21.0.1
 
-# TODO Change base package name; this will be the unique identifier of the app.
-basePackageName=edu.cnm.deepdive.appstarter
-# TODO Change user-facing app name.
-appName=App Starter
+basePackageName=edu.cnm.deepdive.notes
+appName=Notes
 
 # Other build properties
 # Change/comment out the following line to set the JavaDoc HTML generation destination directory.
