Capture workflow begun

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,19 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
+    
+    <provider
+      android:authorities="${applicationId}.service.imagefileprovider"
+      android:name=".service.ImageFileProvider"
+      android:exported="false"
+      android:grantUriPermissions="true">
+
+      <meta-data
+        android:name="android.support.FILE_PROVIDER_PATHS"
+        android:resource="@xml/provider_paths"/>
+
+    </provider>
+    
   </application>
 
 </manifest>
